<?php

namespace App\Enums;

enum ListingType: string
{
    case SALE = 'SALE';
    case RENT = 'RENT';
}
